just some tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,9 @@ env:
   - GOAL=eslint
   - GOAL=build
 
-script: make $GOAL
+script: 
+  - yarn test
+  - make $GOAL
 
 notifications:
   webhooks:
